<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Awful</string>
    <string name="home">Home</string>
    <string name="logout">All your dreams</string>
    <string name="usercp">User Control Panel</string>
    <string name="back">Previous Page</string>
    <string name="forward">Next Page</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="go_to">Go to Page</string>
    <string name="quote">Quote</string>
    <string name="edit">Edit</string>
    <string name="forums_title">Forums</string>
    <string name="user_cp">User Control Panel</string>
    <string name="post_reply">Post Reply</string>
    <string name="login_succeeded">GLUUUUUUUUUUEEEEEEE</string>
    <string name="login_failed">Login failed!</string>
    <string name="logout_message">Make all your wildest dreams come true?</string>
    <string name="invalid_page">Enter a real number</string>
    <string name="mark_last_read">Mark last read</string>
    <string name="reply_invalid_title">You can\'t post here</string>
    <string name="reply_invalid_message">Fly away nerd!</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">OK</string>
    <string name="threads">Threads</string>
    <string name="username_pref">Username</string>
    <string name="user_quote">Highlight your quotes</string>
    <string name="user_highlight">Highlight username</string>
    <string name="user_quote_summary">Allows the app to highlight when you\'re quoted in a post</string>
    <string name="user_highlight_summary">Allows the app to highlight when you\'re mentioned in a post</string>
    <string name="prefs_salr">SALR Preferences</string>
    <string name="inline_youtube">Embedded Youtube</string>
    <string name="inline_youtube_summary">Display Youtube videos within a post</string>
    
    <!-- Preferences -->
    <string name="prefs_thread_display">Thread Display Settings</string>
    <string name="use_large_scrollbar">Use Large Scrollbar</string>
    <string name="use_large_scrollbar_summary">The kind you can touch and fling</string>
    <string name="default_post_font_size">Default Post Font Size</string>
    <string name="colors">Change Colors</string>
    <string name="themes">Choose Theme</string>
    <string name="alternate_backgrounds">Alternate Post BG Colors</string>
    <string name="default_post_font_color">Default Post Font Color</string>
    <string name="secondary_post_font_color">Alternative Font Color</string>
    <string name="default_post_background_color">Default Background Color</string>
    <string name="alt_post_background_color">Alternative Background Color</string>
    <string name="read_post_background_color">Read Post BG Color</string>
    <string name="alt_read_post_background_color">Alt Read Post BG Color</string>
    <string name="op_post_color">OP Post Color</string>
    <string name="hyperlink_font_quote_color">Quote / Link Font Color</string>
    <string name="press_color_to_apply">Press color to apply</string>
    <string name="dialog_color_picker">Select Color</string>
    <string name="about">About...</string>
    <string name="about_summary">Contributors and library licenses</string>
	<string name="about_message">"This app sure is something awful. It doesn't even credit its contributors or used libraries here!"</string>
	<string name="prefs_global">Global Settings</string>
	<string name="orientation">Screen Orientation</string>
	<string-array name="orientations">
		<item>Default</item>
		<item>Sensor</item>
		<item>Portrait</item>
		<item>Landscape</item>
	</string-array>
	<string-array name="themes">
		<item>Default</item>
		<item>Dark</item>
		<item>yospos</item>
		<item>Custom</item>
	</string-array>
	<string-array name="threadinfo">
		<item>Author</item>
		<item>Killed By</item>
		<item>Number of Pages</item>
		<item>Disabled</item>
	</string-array>
	<string-array name="imgur_thumbnails">
		<item>Don\'t replace pictures</item>
		<item>Tiny (160px)</item>
		<item>Medium (320px)</item>
		<item>Large (640px)</item>
		<item>Huge (1024px)</item>
	</string-array>
	<string name="bookmark">Bookmark</string>
	<string name="unbookmark">Unbookmark</string>
	<string name="rate_thread">Rate Thread</string>
	<string name="load_images">Load Images</string>
	<string name="load_images_summary">If disabled, images are replaced with links.</string>
	<string name="read_post_background2_color">Read Post Alternate Color</string>
	<string name="select_forum">Select a forum</string>
	<string name="select_message">Select a message on the left or click the new message icon at the top of the screen</string>
	<string name="setting_posts_per_page">Posts Per Page</string>
	<string name="setting_posts_per_page_summary">Maximum: 40</string>
	<string name="goto_firstpage">First Page</string>
	<string name="goto_lastpage">Last Page</string>
	<string name="toggle_bookmark">Toggle Bookmark</string>
	<string name="mark_unread">Mark Thread Unread</string>
	<string name="private_message">Private Messages</string>
	<string name="wrap_titles">Wrap Thread Titles</string>
	<string name="wrap_titles_summary">Allows thread titles to be more than one line long.</string>
	<string name="show_spoilers">Show all spoilers</string>
	<string name="show_spoilers_summary">Spoilers are displayed as normal text.</string>
	<string name="send_pm">Send PM</string>
	<string name="new_pm">New Private Message</string>
	<string name="hide_read_images">Hide Old Images</string>
	<string name="hide_read_images_summary">Hide images in previously viewed posts.</string>
	<string name="show_smilies">Show Emotes</string>
	<string name="show_smilies_summary">Show emotes or replace with :text: version.</string>
	<string name="threadinfo">Thread info</string>
	<string name="imgur_thumbnails">Imgur Thumbnails</string>
	<string name="vote_failed">An error occured while voting, please try again</string>
	<string name="vote_succeeded">You rated this thread %d, go hog wild</string>
	<string name="copy_url">Copy Thread Url</string>
	<string name="copy_url_success">Url has been copied to the clipboard.</string>
	<string name="draft_alert_keep">Keep Message</string>
	<string name="draft_alert_discard">Discard Message and Continue</string>
	<string name="draft_alert_title">Previous Reply Found</string>
    <string name="new_threads_first">Sort UCP by new posts</string>
</resources>
